fix issues with z-index and adding closing on scroll for modal

--- a/styles/global.css
+++ b/styles/global.css
@@ -238,6 +238,7 @@ html {
   }
 
   .main-header-big {
+    z-index: 10000;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -247,7 +248,6 @@ html {
     padding-top: var(--main-title-top-padding);
     padding-bottom: 0;
     position: sticky;
-    z-index: 1000; /* Adjust z-index to ensure proper stacking order */
     background-color: var(--global-bg-color);
     transition: all 0.5s ease-in-out;
     h1 {
@@ -269,6 +269,8 @@ html {
   }
 
   .main-header-small {
+    z-index: 10000;
+
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -282,6 +284,7 @@ html {
     background-color: var(--global-bg-color);
     transition: all 0.5s ease-in-out;
     h1 {
+
       flex-shrink: 0;
       width: 19.18931rem;
       height: 2rem;
@@ -438,8 +441,9 @@ html {
   height: var(--date-selector-height) + calc(var(--date-selector-top-bottom-padding) / 2);
   color: var(--color-primary);
   position: sticky;
-  z-index: 1000; /* Adjust z-index to ensure proper stacking order */
+  z-index: 1000000; /* Adjust z-index to ensure proper stacking order */
   background-color: var(--global-bg-color);
+
 
   /* font-weight: bold; */
 }
@@ -626,7 +630,6 @@ html {
   width: 100%;
   height: 3rem;
   position: sticky;
-  z-index: 100; 
 
   h1 {
     font-size: 2.5em;
@@ -637,13 +640,14 @@ html {
 
 .header-0 {
   top: 0;
+
 }
 
 .header-1-big {
   top: calc(var(--total-first-headers-height-big) - 0.04rem);
   bottom: calc(var(--sticky-header-height) * 4);
   transition: all 0.5s ease-in-out;
-  z-index: 10;
+  z-index: 100;
 
 }
 
@@ -651,14 +655,16 @@ html {
   top: calc(var(--total-first-headers-height-small) - 0.04rem);
   bottom: calc(var(--sticky-header-height) * 4);
   transition: all 0.5s ease-in-out;
-  z-index: 10000;
+  z-index: 100;
+
 }
 
 .header-2-big {
   top: calc(var(--total-first-headers-height-big) - 0.05rem + var(--sticky-header-height));
   /* bottom: calc(var(--sticky-header-height) * 3); */
   transition: all 0.5s ease-in-out;
-  z-index: 100;
+  z-index: 100 ;
+
 
 }
 
@@ -666,7 +672,8 @@ html {
   top: calc(var(--total-first-headers-height-small) - 0.05rem + var(--sticky-header-height));
   /* bottom: calc(var(--sticky-header-height) * 3); */
   transition: all 0.5s ease-in-out;
-  z-index: 100;
+  z-index: 100 ;
+
 
 
 }
@@ -675,7 +682,8 @@ html {
   top: calc(var(--total-first-headers-height-big) - 0.03rem + calc(var(--sticky-header-height) * 2));
   bottom: calc(var(--sticky-header-height) * 2);
   transition: all 0.5s ease-in-out;
-  z-index: 100;
+  z-index: 100 ;
+
 
   
 }
@@ -684,7 +692,8 @@ html {
   top: calc(var(--total-first-headers-height-small) - 0.03rem + calc(var(--sticky-header-height) * 2));
   /* bottom: calc(var(--sticky-header-height) * 2); */
   transition: all 0.5s ease-in-out;
-  z-index: 100;
+  z-index: 100 ;
+
 
 }
 
@@ -692,7 +701,8 @@ html {
   top: calc(var(--total-first-headers-height-big) - 0.8rem + calc(var(--sticky-header-height) * 3));
   bottom: 0;
   transition: all 0.5s ease-in-out;
-  z-index: 100;
+  z-index: 100 ;
+
 
 }
 
@@ -701,7 +711,8 @@ html {
   bottom: 0;
 
   transition: all 0.5s ease-in-out;
-  z-index: 100;
+  z-index: 100 ;
+
 
 }
 
@@ -709,7 +720,8 @@ html {
   top: calc(var(--total-first-headers-height-big) - 1rem + calc(var(--sticky-header-height) * 4));
   /* bottom: calc(var(--sticky-header-height) * 0); */
   transition: all 0.5s ease-in-out;
-  z-index: 100;
+  z-index: 100 ;
+
 
 }
 
@@ -717,7 +729,8 @@ html {
   top: calc(var(--total-first-headers-height-small) - 1rem + calc(var(--sticky-header-height) * 4));
   /* bottom: calc(var(--sticky-header-height) * 0); */
   transition: all 0.5s ease-in-out;
-  z-index: 100;
+  z-index: 100 ;
+
 
 }
 
@@ -854,6 +867,7 @@ html {
   border: transparent;
   padding: 0, 0, 0, 0;
   margin-top: 0;
+  z-index: 99;
 }
 
 .footer-big-header-stick {
@@ -1398,7 +1412,7 @@ html {
   color: rgba(9, 0, 189, 0.2);
   border: none;
   outline: none;
-  z-index: 2; /* Make sure buttons are above the indicator */
+  z-index: 1; /* Make sure buttons are above the indicator */
   transition: color 0.3s ease;
 }
 
@@ -1458,7 +1472,6 @@ html {
 }
 
 .modal-overlay {
-
   z-index: 100;
   max-height: 0;
   overflow: hidden;
@@ -1472,6 +1485,8 @@ html {
 
 .modal-overlay.modal-active {
   max-height: 1000vh; /* Large enough to show the modal */
+  position: relative;
+  z-index: 90;
   pointer-events: auto; /* Allows interaction */
 }
 
@@ -1495,13 +1510,12 @@ html {
   margin-right: 0.5rem;
   margin-bottom: 0.5rem;
   padding-bottom: 0.5rem;
-  z-index: 5;
   text-align: left;
   pointer-events: auto; /* Enables interaction within the modal */
   overflow: hidden; /* Ensure content doesn't overflow when collapsed */
   transition: max-height 3s ease-in-out, padding 3s ease-in-out;
   border-bottom: 2px solid var(--color-secondary);
-  z-index: 1100;
+
 }
 
 .modal-overlay.modal-active .modal-content {
@@ -1553,7 +1567,7 @@ html {
   grid-template-columns: repeat(4, 1fr); /* 4 items per row */
   gap: 0.625rem;
   row-gap: 0.625rem;
-  z-index: 1;
+  z-index: 99;
 }
 
 .grid-item {
@@ -1888,7 +1902,7 @@ html {
   color: #0900bd;
   border: none;
   outline: none;
-  z-index: 2;
+  /* z-index: 2; */
   transition: color 0.3s ease, background-color 0.3s ease;
 }
 
@@ -2419,6 +2433,10 @@ Modal content .modal-content {
 /* In your CSS file */
 .react-calendar {
   color:#0900bd;
+  overflow: hidden;
+  z-index: 10000;
+  
+
   font-size: small;
   background-color: var(--component-bg-color) !important; /* Use the color of your choice */
 }
@@ -2429,7 +2447,7 @@ Modal content .modal-content {
   zoom: 1; /* Default zoom level for all screens */
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 501px) {
   .screen-size {
     zoom: 0.6; /* Zoom out on screens larger than 1024px (e.g., computers) */
   }
